--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "dev:vite": "vite",
+    "build:vite": "vite build"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +16,6 @@
     "webpack": "^5.100.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
+    ,"vite": "^5.0.0"
   }
 }
